@@ -1,9 +1,13 @@
 AM_LDFLAGS = -static
 
-bin_PROGRAMS = canonical_weights test_read_history
+bin_PROGRAMS = canonical_weights combine_logs test_read_history
 
 canonical_weights_SOURCES = canonical_weights.cpp
 canonical_weights_LDADD = ../../muninn/libmuninn.la
 
+combine_logs_SOURCES = combine_logs.cpp
+combine_logs_LDADD = ../../muninn/libmuninn.la
+
 test_read_history_SOURCES = test_read_history.cpp
 test_read_history_LDADD = ../../muninn/libmuninn.la
+
